Refined error handling notes and started with route notes

--- a/AngularLessonInCode/src/app/app.component.html
+++ b/AngularLessonInCode/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-web-requests></app-web-requests>
+<h2> Static Content Goes Here </h2> 
+<!-- 
+  -- Adds content of routed component after router-outlet tag. Any component
+  -- call prior to this tag renders normally before routed content. This is 
+  -- handy in case of creating pages with static content on each link like navbar.
+  -->
+<router-outlet></router-outlet>
